--- a/backend/src/package.json
+++ b/backend/src/package.json
@@ -16,5 +16,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.5"
   }
 }
